--- a/src/css/comm.css
+++ b/src/css/comm.css
@@ -76,3 +76,21 @@ body{
 .thumbnail{
     margin-bottom: 0px;
 }
+
+
+
+.fileupload{
+    position: absolute;
+    display: inline-block;
+    top: 0;
+    right: 0;
+    margin: 0;
+    border: solid transparent;
+    opacity: 0;
+    filter:alpha(opacity=0);
+    cursor: pointer;
+}
+
+.box{
+    position: relative;
+}
